--- a/register.html
+++ b/register.html
@@ -22,40 +22,42 @@
                 <h2 class="text-primary text-center">Créer votre compte</h2>
                 <form>
                     <!-- First name input -->
-                    <div class="form-outline mb-4">
+                    <div class="form-group mb-4">
+                        <label for="form2Example1">Nom :</label>
                         <input type="text" id="form2Example1" class="form-control" placeholder="Saisissez vote nom ici"
                             required />
-                        <label class="form-label" for="form2Example1">Nom :</label>
-                        <div id="divFirstName"></div>
+                        <div class='invalid-feedback' id="divFirstName">aaaa</div>
                     </div>
 
                     <!-- Last name input -->
-                    <div class="form-outline mb-4">
+                    <div class="form-group mb-4">
+                        <label class="form-label" for="form2Example2">Prénom :</label>
                         <input type="text" id="form2Example2" class="form-control"
                             placeholder="Saisissez vote prénom ici" />
-                        <label class="form-label" for="form2Example2">Prénom :</label>
                         <div id="divLastName"></div>
                     </div>
+
                     <!-- Email input -->
-                    <div class="form-outline mb-4">
+                    <div class="form-group mb-4">
+                        <label class="form-label" for="form2Example3">E-mail :</label>
                         <input type="email" id="form2Example3" class="form-control"
                             placeholder="Saisissez vote e-mail ici" />
-                        <label class="form-label" for="form2Example3">E-mail :</label>
                         <div id="divEmail"></div>
                     </div>
 
                     <!-- Password input -->
-                    <div class="form-outline mb-4">
+                    <div class="form-group mb-4">
+                        <label class="form-label" for="form2Example4">Mot de passe :</label>
                         <input type="password" id="form2Example4" class="form-control"
                             placeholder="Saisissez vote mot de passe ici" />
-                        <label class="form-label" for="form2Example4">Mot de passe :</label>
                         <div id="divPassword"></div>
                     </div>
+
                     <!-- Confirm password input -->
-                    <div class="form-outline mb-4">
+                    <div class="form-group mb-4">
+                        <label class="form-label" for="form2Example5">Confirmation mot de passe :</label>
                         <input type="password" id="form2Example5" class="form-control"
                             placeholder="Saisissez vote mot de passe ici" />
-                        <label class="form-label" for="form2Example5">Confirmation mot de passe :</label>
                         <div id="divConfirmPassword"></div>
                     </div>
                     <!-- Submit button -->
