--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
                         <label for="form2Example1">Nom :</label>
                         <input type="text" id="form2Example1" class="form-control" placeholder="Saisissez vote nom ici"
                             required />
-                        <div class='invalid-feedback' id="divFirstName">aaaa</div>
+                        <div class='invalid-feedback' id="divFirstName"></div>
                     </div>
 
                     <!-- Last name input -->
