--- a/register.html
+++ b/register.html
@@ -24,9 +24,9 @@
                     <!-- First name input -->
                     <div class="form-group mb-4">
                         <label for="form2Example1">Nom :</label>
-                        <input type="text" id="form2Example1" class="form-control" placeholder="Saisissez vote nom ici"
-                            required />
-                        <div class='invalid-feedback' id="divFirstName"></div>
+                        <input type="text" id="form2Example1" class="form-control"
+                            placeholder="Saisissez vote nom ici" />
+                        <div class="invalid-feedback">Le nom est obligatoire.</div>
                     </div>
 
                     <!-- Last name input -->
