--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
                         <label class="form-label" for="form2Example2">Prénom :</label>
                         <input type="text" id="form2Example2" class="form-control"
                             placeholder="Saisissez vote prénom ici" />
-                        <div id="divLastName"></div>
+                        <div class="invalid-feedback">Le prénom est obligatoire.</div>
                     </div>
 
                     <!-- Email input -->
@@ -42,7 +42,7 @@
                         <label class="form-label" for="form2Example3">E-mail :</label>
                         <input type="email" id="form2Example3" class="form-control"
                             placeholder="Saisissez vote e-mail ici" />
-                        <div id="divEmail"></div>
+                        <div class="invalid-feedback">L'adresse email est invalide ou obligatoire.</div>
                     </div>
 
                     <!-- Password input -->
@@ -50,7 +50,7 @@
                         <label class="form-label" for="form2Example4">Mot de passe :</label>
                         <input type="password" id="form2Example4" class="form-control"
                             placeholder="Saisissez vote mot de passe ici" />
-                        <div id="divPassword"></div>
+                        <div class="invalid-feedback">Le mot de passe est obligatoire.</div>
                     </div>
 
                     <!-- Confirm password input -->
@@ -58,7 +58,7 @@
                         <label class="form-label" for="form2Example5">Confirmation mot de passe :</label>
                         <input type="password" id="form2Example5" class="form-control"
                             placeholder="Saisissez vote mot de passe ici" />
-                        <div id="divConfirmPassword"></div>
+                        <div class="invalid-feedback">La confirmation de mot de passe est obligatoire.</div>
                     </div>
                     <!-- Submit button -->
                     <button type="button" class="btn btn-success btn-block mb-4">S'inscrire</button>
