--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page d'inscription</title>
+    <title>Dashboard</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
