--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@
                         <label class="form-label" for="form2Example5">Confirmation mot de passe :</label>
                         <input type="password" id="form2Example5" class="form-control"
                             placeholder="Saisissez vote mot de passe ici" />
-                        <div class="invalid-feedback">La confirmation de mot de passe est obligatoire.</div>
+                        <div class="invalid-feedback">Les mots de passe ne sont pas identiques.</div>
                     </div>
                     <!-- Submit button -->
                     <button type="button" class="btn btn-success btn-block mb-4">S'inscrire</button>
