--- a/login.html
+++ b/login.html
@@ -22,17 +22,19 @@
                 <h2 class="text-primary text-center">Page d'authentification</h2>
                 <form>
                     <!-- Email input -->
-                    <div class="form-outline mb-4">
+                    <div class="form-group mb-4">
                         <input type="email" id="form2Example1" class="form-control"
                             placeholder="Saisissez vote e-mail ici" />
                         <label class="form-label" for="form2Example1">E-mail :</label>
+                        <div class="invalid-feedback">L'adresse email est obligatoire.</div>
                     </div>
 
                     <!-- Password input -->
-                    <div class="form-outline mb-4">
+                    <div class="form-group mb-4">
                         <input type="password" id="form2Example2" class="form-control"
                             placeholder="Saisissez vote mot de passe ici" />
                         <label class="form-label" for="form2Example2">Mot de passe :</label>
+                        <div class="invalid-feedback">Le mot de passe est obligatoire.</div>
                     </div>
                     <!-- Submit button -->
                     <button type="button" class="btn btn-success btn-block mb-4">Connexion</button>
@@ -49,7 +51,7 @@
     </div>
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.js"></script>
-
+    <script src='login.js'></script>
 </body>
 
 </html>
