--- a/register.html
+++ b/register.html
@@ -23,40 +23,37 @@
                 <form>
                     <!-- First name input -->
                     <div class="form-group mb-4">
-                        <label for="form2Example1">Nom :</label>
-                        <input type="text" id="form2Example1" class="form-control"
-                            placeholder="Saisissez vote nom ici" />
+                        <label for="nom">Nom :</label>
+                        <input type="text" id="nom" class="form-control" placeholder="Saisissez vote nom ici" />
                         <div class="invalid-feedback">Le nom est obligatoire.</div>
                     </div>
 
                     <!-- Last name input -->
                     <div class="form-group mb-4">
-                        <label class="form-label" for="form2Example2">Prénom :</label>
-                        <input type="text" id="form2Example2" class="form-control"
-                            placeholder="Saisissez vote prénom ici" />
+                        <label class="form-label" for="prenom">Prénom :</label>
+                        <input type="text" id="prenom" class="form-control" placeholder="Saisissez vote prénom ici" />
                         <div class="invalid-feedback">Le prénom est obligatoire.</div>
                     </div>
 
                     <!-- Email input -->
                     <div class="form-group mb-4">
-                        <label class="form-label" for="form2Example3">E-mail :</label>
-                        <input type="email" id="form2Example3" class="form-control"
-                            placeholder="Saisissez vote e-mail ici" />
+                        <label class="form-label" for="email">E-mail :</label>
+                        <input type="email" id="email" class="form-control" placeholder="Saisissez vote e-mail ici" />
                         <div class="invalid-feedback">L'adresse email est invalide ou obligatoire.</div>
                     </div>
 
                     <!-- Password input -->
                     <div class="form-group mb-4">
-                        <label class="form-label" for="form2Example4">Mot de passe :</label>
-                        <input type="password" id="form2Example4" class="form-control"
+                        <label class="form-label" for="password">Mot de passe :</label>
+                        <input type="password" id="password" class="form-control"
                             placeholder="Saisissez vote mot de passe ici" />
                         <div class="invalid-feedback">Le mot de passe est obligatoire.</div>
                     </div>
 
                     <!-- Confirm password input -->
                     <div class="form-group mb-4">
-                        <label class="form-label" for="form2Example5">Confirmation mot de passe :</label>
-                        <input type="password" id="form2Example5" class="form-control"
+                        <label class="form-label" for="confirmPassword">Confirmation mot de passe :</label>
+                        <input type="password" id="confirmPassword" class="form-control"
                             placeholder="Saisissez vote mot de passe ici" />
                         <div class="invalid-feedback">Les mots de passe ne sont pas identiques.</div>
                     </div>
