--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                         <div class="invalid-feedback">Le mot de passe est obligatoire.</div>
                     </div>
                     <!-- Submit button -->
-                    <button type="button" class="btn btn-success btn-block mb-4">Connexion</button>
+                    <button type="submit" id="login" class="btn btn-success btn-block mb-4">Connexion</button>
                     <!-- 2 column grid layout for inline styling -->
                     <div class="row mb-4">
                         <div class="col-lg-12 text-center">
