--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@
                         <div class="invalid-feedback">Les mots de passe ne sont pas identiques.</div>
                     </div>
                     <!-- Submit button -->
-                    <button type="button" class="btn btn-success btn-block mb-4">S'inscrire</button>
+                    <button type="submit" id="inscription" class="btn btn-success btn-block mb-4">S'inscrire</button>
                     <!-- 2 column grid layout for inline styling -->
                 </form>
             </div>
