--- a/login.html
+++ b/login.html
@@ -23,16 +23,15 @@
                 <form>
                     <!-- Email input -->
                     <div class="form-group mb-4">
-                        <label class="form-label" for="form2Example1">E-mail :</label>
-                        <input type="email" id="form2Example1" class="form-control"
-                            placeholder="Saisissez vote e-mail ici" />
+                        <label class="form-label" for="email">E-mail :</label>
+                        <input type="email" id="email" class="form-control" placeholder="Saisissez vote e-mail ici" />
                         <div class="invalid-feedback">L'adresse email est obligatoire.</div>
                     </div>
 
                     <!-- Password input -->
                     <div class="form-group mb-4">
-                        <label class="form-label" for="form2Example2">Mot de passe :</label>
-                        <input type="password" id="form2Example2" class="form-control"
+                        <label class="form-label" for="password">Mot de passe :</label>
+                        <input type="password" id="password" class="form-control"
                             placeholder="Saisissez vote mot de passe ici" />
                         <div class="invalid-feedback">Le mot de passe est obligatoire.</div>
                     </div>
